2008-04-18  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - test and updated results for https://bugs.webkit.org/show_bug.cgi?id=17921
          Extra white space at the end of right-aligned or justified text with -webkit-line-break: after-white-space

        * fast/text/trailing-white-space.html: Added.
        * http/tests/misc/acid3-expected.txt:
        * platform/mac/editing/deleting/delete-block-table-expected.txt:
        * platform/mac/editing/deleting/delete-to-select-table-expected.txt:
        * platform/mac/editing/deleting/deletionUI-single-instance-expected.txt:
        * platform/mac/editing/execCommand/5482023-expected.txt:
        * platform/mac/editing/execCommand/boldSelection-expected.txt:
        * platform/mac/editing/execCommand/italicizeByCharacter-expected.txt:
        * platform/mac/editing/execCommand/modifyForeColorByCharacter-expected.txt:
        * platform/mac/editing/execCommand/print-expected.txt:
        * platform/mac/editing/execCommand/selectAll-expected.txt:
        * platform/mac/editing/execCommand/strikethroughSelection-expected.txt:
        * platform/mac/editing/inserting/editable-html-element-expected.txt:
        * platform/mac/editing/inserting/insert-div-027-expected.txt:
        * platform/mac/editing/pasteboard/5028447-expected.txt:
        * platform/mac/editing/pasteboard/block-wrappers-necessary-expected.checksum:
        * platform/mac/editing/pasteboard/block-wrappers-necessary-expected.png:
        * platform/mac/editing/pasteboard/block-wrappers-necessary-expected.txt:
        * platform/mac/editing/pasteboard/nested-blocks-with-text-area-expected.checksum:
        * platform/mac/editing/pasteboard/nested-blocks-with-text-area-expected.png:
        * platform/mac/editing/pasteboard/nested-blocks-with-text-area-expected.txt:
        * platform/mac/editing/pasteboard/nested-blocks-with-text-field-expected.checksum: