@@ -1,0 +1,20 @@
+<p>
+    This is a test for <i><a href="rdar://problem/5872671">rdar://problem/5872671</a> REGRESSION (3.1.1-TOT): Repro crash going to Ortega Park home page</i>.
+</p>
+<p>
+    The test passed if it did not crash.
+</p>
+<div>
+    <span style='padding: 1px;'>
+        <div></div>
+    </span>
+    <br>
+    <img id="target">
+</div>
+<script>
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+
+    document.body.offsetTop;
+    document.getElementById("target").style.height = "100px";
+</script>
